<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insts">

    <Button
        android:id="@+id/nextQ"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="600dp"
        android:layout_marginRight="0dp"
        android:onClick="returnToMain"
        android:text="@string/returnMain"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:alpha="1.0"
        android:enabled="true"
        />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="600dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tIntsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tInstLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="375dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tInts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timedInst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="200dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/utIntsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utInstLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/utInts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/untimedInst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>