<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="600dp"
        android:textSize="35sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="600dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/startTButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="450dp"
        android:layout_marginRight="0dp"
        android:onClick="beginTGame"
        android:text="@string/startTime"
        android:backgroundTint="@color/red"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/startUTButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="350dp"
        android:layout_marginRight="0dp"
        android:onClick="beginUTGame"
        android:text="@string/startUTime"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/TLeaderBoardButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="250dp"
        android:layout_marginRight="0dp"
        android:onClick="seeTLB"
        android:text="@string/seeTimeLB"
        android:backgroundTint="@color/red"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/UTLeaderBoardButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="150dp"
        android:layout_marginRight="0dp"
        android:onClick="seeUTLB"
        android:text="@string/seeUTimeLB"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>