<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizResults">

    <TextView
        android:id="@+id/out10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsPHer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="525dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/timeTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsPHer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="425dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/return2main"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="0dp"
        android:onClick="returnToMain"
        android:text="@string/returnMain"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:enabled="true"
        />

    <Button
        android:id="@+id/returnLeader"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="0dp"
        android:onClick="returnLeader"
        android:text="@string/seeUTimeLB"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:enabled="true"
        />

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="325dp"
        android:hint="@string/enterName"
        android:inputType="text"
        android:ems="10"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>